--- a/smart_exp/src/arduino/.vscode/settings.json
+++ b/smart_exp/src/arduino/.vscode/settings.json
@@ -1,5 +1,13 @@
 {
     "files.associations": {
-        "*.tcc": "cpp"
+        "*.tcc": "cpp",
+        "optional": "cpp",
+        "istream": "cpp",
+        "ostream": "cpp",
+        "system_error": "cpp",
+        "array": "cpp",
+        "tuple": "cpp",
+        "type_traits": "cpp",
+        "utility": "cpp"
     }
 }
