--- a/smart_exp/src/java/viewer_program/.classpath
+++ b/smart_exp/src/java/viewer_program/.classpath
@@ -6,12 +6,8 @@
 			<attribute name="gradle_used_by_scope" value="main,test"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-11/">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-11/"/>
 	<classpathentry kind="con" path="org.eclipse.buildship.core.gradleclasspathcontainer"/>
-	<classpathentry kind="lib" path="/home/luca/Arduino/seiot2021/java/lib/jssc.jar"/>
+	<classpathentry kind="lib" path="lib/jssc-2.9.2.jar"/>
 	<classpathentry kind="output" path="bin/default"/>
 </classpath>
