--- a/smart_dam/src/dam_service/.classpath
+++ b/smart_dam/src/dam_service/.classpath
@@ -6,7 +6,14 @@
 			<attribute name="gradle_used_by_scope" value="main,test"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-11/"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-11/">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.buildship.core.gradleclasspathcontainer"/>
+	<classpathentry kind="lib" path="/home/luca/Arduino/seiot-assignments-2020/smart_dam/src/dam_service/mysql-connector-java-8.0.21.jar"/>
+	<classpathentry kind="lib" path="/home/luca/Arduino/seiot-assignments-2020/smart_dam/src/dam_service/jssc.jar"/>
+	<classpathentry kind="lib" path="/home/luca/Arduino/seiot-assignments-2020/smart_dam/src/dam_service/gson-2.8.6.jar"/>
 	<classpathentry kind="output" path="bin/default"/>
 </classpath>
